[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/PlayerButtonConfigs.gd" type="Script" id=1]
[ext_resource path="res://Scenes/KeybindEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Player/Player1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Player4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Player7.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Player9.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Player10.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Player5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Player3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Player2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Player8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Player6.png" type="Texture" id=12]

[node name="PlayerConfigs" type="Control"]
margin_left = 36.0
margin_top = 36.0
margin_right = 396.0
margin_bottom = 90.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
keybindEdit = ExtResource( 2 )
spriteArray = [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ) ]

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -11.0
margin_right = 90.0
margin_bottom = 13.0
text = "Player1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_right = -122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpritePanel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_right = -22.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/SpritePanel"]
position = Vector2( 45, 18 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="SpriteCount" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 36.0
margin_right = -40.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteCountLabel" type="Label" parent="Control/SpriteCount"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -18.0
margin_right = -22.0
margin_bottom = 2.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -18.0
margin_right = 42.0
margin_bottom = 2.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -27.0
margin_right = 64.0
margin_bottom = 27.0
pressed = true
text = "HUMAN:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -27.0
margin_bottom = -3.0
mouse_filter = 2
text = "JOYSTICK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeybindsButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 9.0
margin_bottom = 29.0
text = "EDIT KEYBINDS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Control/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Control/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="KeybindsButton" to="." method="_on_KeybindsButton_pressed"]
